--- a/ebsentinel/Cargo.toml
+++ b/ebsentinel/Cargo.toml
@@ -13,6 +13,7 @@ env_logger = { workspace = true }
 libc = { workspace = true }
 log = { workspace = true }
 tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "net", "signal","time"] }
+burn = { version = "0.16.0", features = ["wgpu"] }
 
 [build-dependencies]
 anyhow = { workspace = true }
