--- a/ebsentinel-core/Cargo.toml
+++ b/ebsentinel-core/Cargo.toml
@@ -1,11 +1,10 @@
 [package]
-name = "ebsentinel"
+name = "ebsentinel-core"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
 ebsentinel-common = { path = "../ebsentinel-common", features = ["user"] }
-ebsentinel-core = { path = "../ebsentinel-core" }
 
 anyhow = { workspace = true, default-features = true }
 aya = { workspace = true }
@@ -14,10 +13,8 @@ env_logger = { workspace = true }
 libc = { workspace = true }
 log = { workspace = true }
 tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "net", "signal","time"] }
-burn = { version = "0.16.0", features = ["wgpu"] }
 
 [build-dependencies]
-
 anyhow = { workspace = true }
 aya-build = { workspace = true }
 # TODO(https://github.com/rust-lang/cargo/issues/12375): this should be an artifact dependency, but
@@ -30,10 +27,4 @@ aya-build = { workspace = true }
 # Cargo.toml in the workspace root.
 #
 # Finally note that *any* usage of `artifact = ...` in *any* Cargo.toml in the workspace breaks
-# workflows with stable cargo; stable cargo outright refuses to load manifests that use unstable
-# features.
-ebsentinel-ebpf = { path = "../ebsentinel-ebpf" }
-
-[[bin]]
-name = "ebsentinel"
-path = "src/main.rs"
+# workflows with stable cargo; stable cargo ou
