--- a/ebsentinel-rec/Cargo.toml
+++ b/ebsentinel-rec/Cargo.toml
@@ -4,16 +4,18 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-ebsentinel-common = { path = "../ebsentinel-common", features = ["user"] }
+ebsentinel-core = { path = "../ebsentinel-core" }
 
 anyhow = { workspace = true, default-features = true }
-aya = { workspace = true }
-
-libc = { workspace = true }
-log = { workspace = true }
 tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "net", "signal","time"] }
+rusqlite = "0.32.1"
+serde_rusqlite = "0.36.0"
+serde = { version = "1.0.217", features = ["derive"] }
+bincode = "1.3.3"
+serde_bytes = "0.11.15"
 
 [build-dependencies]
+
 anyhow = { workspace = true }
 aya-build = { workspace = true }
 # TODO(https://github.com/rust-lang/cargo/issues/12375): this should be an artifact dependency, but
@@ -26,4 +28,6 @@ aya-build = { workspace = true }
 # Cargo.toml in the workspace root.
 #
 # Finally note that *any* usage of `artifact = ...` in *any* Cargo.toml in the workspace breaks
-# workflows with stable cargo; stable cargo ou
+# workflows with stable cargo; stable cargo outright refuses to load manifests that use unstable
+# features.
+ebsentinel-ebpf = { path = "../ebsentinel-ebpf" }
