--- a/ebsentinel-train/Cargo.toml
+++ b/ebsentinel-train/Cargo.toml
@@ -4,3 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+autoencoder= {path="../autoencoder"}
+burn = { version = "0.16.0", features = ["wgpu", "train"] }
+rusqlite = "0.32.1"
+serde_rusqlite = "0.36.0"
+serde = { version = "1.0.217", features = ["derive"] }
+bincode = "1.3.3"
+serde_bytes = "0.11.15"
