--- a/ebsentinel-core/Cargo.toml
+++ b/ebsentinel-core/Cargo.toml
@@ -12,7 +12,7 @@ aya-log = { workspace = true }
 env_logger = { workspace = true }
 libc = { workspace = true }
 log = { workspace = true }
-tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "net", "signal","time"] }
+tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "net", "signal","time","sync"] }
 
 [build-dependencies]
 anyhow = { workspace = true }
