--- a/autoencoder/Cargo.toml
+++ b/autoencoder/Cargo.toml
@@ -5,4 +5,6 @@ edition = "2021"
 description= "A simple autoencoder"
 
 [dependencies]
-burn = "0.16.0"
+burn = { version = "0.16.0", features = ["wgpu", "dataset"] }
+serde = "1.0.217"
+serde_bytes = "0.11.15"
