--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,11 @@ libc = { version = "0.2.159", default-features = false }
 log = { version = "0.4.22", default-features = false }
 tokio = { version = "1.40.0", default-features = false }
 which = { version = "6.0.0", default-features = false }
+burn = { version = "0.16.0", default-features = false }
+bincode = "1.3.3"
+rusqlite = "0.32.1"
+serde = { version = "1.0.217" }
+
 
 [profile.release.package.ebsentinel-ebpf]
 debug = 2
