--- a/autoencoder/Cargo.toml
+++ b/autoencoder/Cargo.toml
@@ -5,6 +5,6 @@ edition = "2021"
 description= "A simple autoencoder"
 
 [dependencies]
-burn = { version = "0.16.0", features = ["wgpu", "dataset"] }
-serde = "1.0.217"
+burn = { workspace = true, features = ["wgpu", "dataset"] }
+serde = {workspace = true}
 serde_bytes = "0.11.15"
