--- a/ebsentinel-rec/Cargo.toml
+++ b/ebsentinel-rec/Cargo.toml
@@ -8,11 +8,10 @@ ebsentinel-core = { path = "../ebsentinel-core" }
 
 anyhow = { workspace = true, default-features = true }
 tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "net", "signal","time"] }
-rusqlite = "0.32.1"
-serde_rusqlite = "0.36.0"
-serde = { version = "1.0.217", features = ["derive"] }
-bincode = "1.3.3"
-serde_bytes = "0.11.15"
+rusqlite = {workspace = true}
+serde = { workspace = true, features = ["derive"] }
+bincode = {workspace = true}
+
 
 [build-dependencies]
 
