--- a/ebsentinel-train/Cargo.toml
+++ b/ebsentinel-train/Cargo.toml
@@ -5,9 +5,9 @@ edition = "2021"
 
 [dependencies]
 autoencoder= {path="../autoencoder"}
-burn = { version = "0.16.0", features = ["wgpu", "train"] }
-rusqlite = "0.32.1"
+burn = { workspace=true, features = ["wgpu", "train"] }
+rusqlite = {workspace= true}
 serde_rusqlite = "0.36.0"
 serde = { version = "1.0.217", features = ["derive"] }
-bincode = "1.3.3"
+bincode =  {workspace = true}
 serde_bytes = "0.11.15"
