--- a/ebsentinel-rec/Cargo.toml
+++ b/ebsentinel-rec/Cargo.toml
@@ -11,6 +11,7 @@ tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "net"
 rusqlite = {workspace = true}
 serde = { workspace = true, features = ["derive"] }
 bincode = {workspace = true}
+clap = {workspace = true, features = ["derive"]}
 
 
 [build-dependencies]
